--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve"
+    "build:prod": "webpack --mode production",
+    "build:dev": "webpack serve --mode development"
   },
   "keywords": [],
   "author": "",
