--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build:prod": "webpack --mode production",
-    "build:dev": "webpack serve --mode development"
+    "build:dev": "webpack serve --mode development",
+    "start:dev": "npm run eslint && npm run eslint --fix && npm run build:dev",
+    "eslint": "eslint ./src/containers/*.js",
+    "eslint:fix": "eslint --fix ./src/containers/*.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +18,12 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^10.2.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-watch": "^7.0.0",
     "postcss": "^8.2.12",
     "postcss-loader": "^5.2.0",
     "react": "^17.0.2",
